# imgui-frc-char

./: .gitignore  .styleguide  CMakeLists.txt  glass.ini  imgui.ini
.github/workflows/: main.yml
allwpilib/: CMakeLists.txt  CMakeLists.txt.in
cmake/modules/: BuildWPIGUI.cmake  BuildWPIMath.cmake  BuildWPIUtil.cmake  DownloadWPILibDependency.cmake  GenResources.cmake  WPILib.cmake
cmake/scripts/: GenResource.cmake
src/main/native/: AnalyzeData.cpp  AnalyzeData.h  DataAnalyzer.cpp  DataAnalyzer.h  FRCCharacterizationGUI.cpp  FRCCharacterizationGUI.h  Generator.cpp  Generator.h  Logger.cpp  Logger.h  Main.cpp  Parameters.cpp  Parameters.h
src/main/native/backend/: TestConductor.cpp  TestConductor.h
src/main/native/cpp/: Generator.cpp  Logger.cpp  Main.cpp
src/main/native/cpp/backend/: DataProcessor.cpp  OLS.cpp  ProjectCreator.cpp
src/main/native/cpp/display/: Analyzer.cpp  FRCCharacterization.cpp  Generator.cpp  Logger.cpp
src/main/native/include/: Generator.h  Logger.h
src/main/native/include/backend/: DataProcessor.h  OLS.h  ProjectCreator.h
src/main/native/include/display/: Analyzer.h  FRCCharacterization.h  Generator.h  Logger.h
